# wzrdbrain-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
src/wzrdbrain_mcp/: __init__.py  server.py
tests/: test_server.py
