[project]
name = "wzrdbrain-mcp"
version = "0.2.0"
description = "MCP server for generating physics-aware inline skating combos using wzrdbrain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp==1.26.0",
    "wzrdbrain==0.4.0",
]

[project.scripts]
mcp-server-wzrdbrain = "wzrdbrain_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
